--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon server"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,6 +21,7 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.3.0",
     "nodemon": "^1.19.2",
+    "socket.io": "^2.3.0",
     "stripe": "^7.13.0"
   }
 }
